[gd_scene load_steps=9 format=2]

[ext_resource path="res://objects/World/World.gd" type="Script" id=1]
[ext_resource path="res://objects/UI/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Bitcoin/Bitcoin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Amatic-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://PINGPONG.wav" type="AudioStream" id=5]
[ext_resource path="res://PEW.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 358.029, 524.844 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -25.1985
margin_top = -20.1588
margin_right = 765.802
margin_bottom = 1310.84
color = Color( 1, 0.701961, 0.278431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bitcoin" parent="." instance=ExtResource( 3 )]

[node name="UI" parent="." instance=ExtResource( 2 )]

[node name="Bitcoin_Label" type="Label" parent="." groups=[
"Persist",
]]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 579.411
margin_top = 0.712795
margin_right = 719.411
margin_bottom = 69.7128
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "0.00000"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money_Label" type="Label" parent="." groups=[
"Persist",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.692459
margin_top = 1.01984
margin_right = 90.6925
margin_bottom = 70.0198
custom_fonts/font = SubResource( 1 )
text = "$3200"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 360, 640 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Bot_Timer" type="Timer" parent="."]

[node name="PARTICLE" type="Node2D" parent="."]

[node name="PewAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="PingPong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
